--- a/wiki/FutureIdeas.wiki
+++ b/wiki/FutureIdeas.wiki
@@ -7,3 +7,10 @@ Although for now Dinogotchi is going to be a simple clone, eventually I want to 
 _*Note: These ideas are not in order of importance or any kind of order other than the order I think of them.  They will be put in order later.* _
 
 = Ideas =
+
+One the initial clone has been made then I would like to expand and have some sort of growth pattern for the dinogotchi to follow:
+
+egg > baby > adolescence > adulthood > eventual death.
+
+I would like the growth of the dinogotchi to be determined by the way that the user has interacted with it.  
+_
