--- a/wiki/FutureIdeas.wiki
+++ b/wiki/FutureIdeas.wiki
@@ -17,3 +17,10 @@ I would like the growth of the dinogotchi to be determined by the way that the u
 ----
 
 I would like to integrate some sort of personality for each individual dinogotchi, again this will be determined by the way the user interacts with the pet.  
+----
+
+Networking support, one users dinogotchi can connection to another users dinogotchi and interact with it in interesting ways.  Integration compatibility between two dinogotchis would be determined by their personality.  
+----
+
+Mating of dinogotchis.  Trait of the parents would be "genetically" transfered into the new baby dinogotchi.
+----
