--- a/wiki/FutureIdeas.wiki
+++ b/wiki/FutureIdeas.wiki
@@ -24,3 +24,6 @@ Networking support, one users dinogotchi can connection to another users dinogot
 
 Mating of dinogotchis.  Trait of the parents would be "genetically" transfered into the new baby dinogotchi.
 ----
+
+An interactive, modular environment which determines aspects of your dinogotchis look and personality.
+----
